--- a/references.bib
+++ b/references.bib
@@ -118,3 +118,49 @@ Publisher: Nature Publishing Group},
 	url = {https://doi.org/10.18637/jss.v100.i05},
 	langid = {en}
 }
+
+@article{kyngdon2008,
+	title = {Conjoint Measurement, Error and the Rasch Model: A Reply to Michell, and Borsboom and Zand Scholten},
+	author = {Kyngdon, Andrew},
+	year = {2008},
+	month = {02},
+	date = {2008-02-01},
+	journal = {Theory & Psychology},
+	pages = {125--131},
+	volume = {18},
+	number = {1},
+	doi = {10.1177/0959354307086927},
+	url = {https://doi.org/10.1177/0959354307086927},
+	note = {Publisher: SAGE Publications Ltd},
+	langid = {en}
+}
+
+@article{liddell2018,
+	title = {Analyzing ordinal data with metric models: What could possibly go wrong?},
+	author = {Liddell, Torrin M. and Kruschke, John K.},
+	year = {2018},
+	month = {11},
+	date = {2018-11-01},
+	journal = {Journal of Experimental Social Psychology},
+	pages = {328--348},
+	volume = {79},
+	doi = {10.1016/j.jesp.2018.08.009},
+	url = {https://www.sciencedirect.com/science/article/pii/S0022103117307746},
+	langid = {en}
+}
+
+@article{bürkner2019,
+	title = {Ordinal Regression Models in Psychology: A Tutorial},
+	author = {{Bürkner}, Paul-Christian and Vuorre, Matti},
+	year = {2019},
+	month = {03},
+	date = {2019-03-01},
+	journal = {Advances in Methods and Practices in Psychological Science},
+	pages = {77--101},
+	volume = {2},
+	number = {1},
+	doi = {10.1177/2515245918823199},
+	url = {https://doi.org/10.1177/2515245918823199},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {en}
+}
