--- a/references.bib
+++ b/references.bib
@@ -164,3 +164,19 @@ Publisher: Nature Publishing Group},
 	note = {Publisher: SAGE Publications Inc},
 	langid = {en}
 }
+
+@article{christensen2017,
+	title = {Critical Values for Yen{\textquoteright}s Q3: Identification of Local Dependence in the Rasch Model Using Residual Correlations},
+	author = {Christensen, Karl Bang and Makransky, Guido and Horton, Mike},
+	year = {2017},
+	month = {05},
+	date = {2017-05-01},
+	journal = {Applied Psychological Measurement},
+	pages = {178--194},
+	volume = {41},
+	number = {3},
+	doi = {10.1177/0146621616677520},
+	url = {https://doi.org/10.1177/0146621616677520},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {en}
+}
