--- a/references.bib
+++ b/references.bib
@@ -180,3 +180,63 @@ Publisher: Nature Publishing Group},
 	note = {Publisher: SAGE Publications Inc},
 	langid = {en}
 }
+
+@article{andrich2012,
+	title = {Real and Artificial Differential Item Functioning},
+	author = {Andrich, David and Hagquist, Curt},
+	year = {2012},
+	month = {06},
+	date = {2012-06},
+	journal = {Journal of Educational and Behavioral Statistics},
+	pages = {387--416},
+	volume = {37},
+	number = {3},
+	doi = {10.3102/1076998611411913},
+	url = {http://journals.sagepub.com/doi/10.3102/1076998611411913},
+	langid = {en}
+}
+
+@article{andrich2015,
+	title = {Real and Artificial Differential Item Functioning in Polytomous Items},
+	author = {Andrich, David and Hagquist, Curt},
+	year = {2015},
+	month = {04},
+	date = {2015-04-01},
+	journal = {Educational and Psychological Measurement},
+	pages = {185--207},
+	volume = {75},
+	number = {2},
+	doi = {10.1177/0013164414534258},
+	url = {https://doi.org/10.1177/0013164414534258},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {en}
+}
+
+@article{hagquist2019,
+	title = {Explaining differential item functioning focusing on the crucial role of external information {\textendash} an example from the measurement of adolescent mental health},
+	author = {Hagquist, Curt},
+	year = {2019},
+	month = {09},
+	date = {2019-09-05},
+	journal = {BMC Medical Research Methodology},
+	pages = {185},
+	volume = {19},
+	number = {1},
+	doi = {10.1186/s12874-019-0828-3},
+	url = {https://doi.org/10.1186/s12874-019-0828-3},
+	note = {ZSCC: 0000003}
+}
+
+@article{hagquist2017,
+	title = {Recent advances in analysis of differential item functioning in health research using the Rasch model},
+	author = {Hagquist, Curt and Andrich, David},
+	year = {2017},
+	month = {09},
+	date = {2017-09-19},
+	journal = {Health and Quality of Life Outcomes},
+	volume = {15},
+	doi = {10.1186/s12955-017-0755-0},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5606090/},
+	note = {PMID: 28927468
+PMCID: PMC5606090}
+}
