--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -145,6 +145,15 @@ title = {{patchwork}: The Composer of Plots},
   note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
+@Manual{qrcode,
+title = {{qrcode}: Generate QRcodes with R. Version 0.2.2},
+  author = {Thierry Onkelinx and Victor Teh},
+  year = {2023},
+  url = {https://thierryo.github.io/qrcode/},
+  abstract = {Create static QR codes in R. The content of the QR code is exactly what the user defines. We don't add a redirect URL, making it impossible for us to track the usage of the QR code. This allows to generate fast, free to use and privacy friendly QR codes.},
+  keywords = {two-dimensional barcode; matrix barcode},
+  doi = {10.5281/zenodo.5040088},
+}
 @Manual{RISEkbmRasch,
 title = {{RISEkbmRasch}: Psychometric Analysis in R with Rasch Measurement Theory},
   author = {Magnus Johansson},
