various fixes slide < 41

--- a/references.bib
+++ b/references.bib
@@ -240,3 +240,18 @@ Publisher: Nature Publishing Group},
 	note = {PMID: 28927468
 PMCID: PMC5606090}
 }
+
+@article{boone2017,
+	title = {Rasch analysis: A primer for school psychology researchers and practitioners},
+	author = {Boone, William J. and Noltemeyer, Amity},
+	editor = {Yates, Gregory},
+	year = {2017},
+	month = {01},
+	date = {2017-01-01},
+	journal = {Cogent Education},
+	pages = {1416898},
+	volume = {4},
+	number = {1},
+	doi = {10.1080/2331186X.2017.1416898},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/2331186X.2017.1416898}
+}
