--- a/RaschIRTlecture.qmd
+++ b/RaschIRTlecture.qmd
@@ -7,9 +7,9 @@ title-block-banner-color: "#FFFFFF"
 author: 
   name: Magnus Johansson, PhD
   affiliation: RISE Research Institutes of Sweden
-  affiliation-url: https://ri.se/shic
+  affiliation-url: https://www.ri.se/en/what-we-do/expertises/category-based-measurements
   orcid: 0000-0003-1669-592X
-date: 2023-11-28
+date: last-modified
 date-format: iso
 
 format: 
@@ -104,8 +104,6 @@ pss14$age <- NULL
 pss14$gender <- NULL
 pss7 <- pss14 %>% 
   select(ends_with("n"))
-
-
 ```
 
 ## Overview {background-color="#009ca6"}
@@ -120,26 +118,26 @@ pss7 <- pss14 %>%
 
 ## About me {.smaller}
 
-- Lic. psychologist & PhD behavior analysis
-- Scientist at RISE Research Institutes of Sweden
-  - Department of Measurement Science and Technology
-- Background: 
-  - CEO in private care
-  - 10 years consulting; OBM, leadership/groups/organizations, sustainability, etc.
-  - Swedish pilot trial of the PAX Good Behavior Game (Public Health Agency, Karolinska Institutet, Dennis Embry)
-  - Very interested in prevention and measurement :)
+-   Lic. psychologist (Uppsala) & PhD behavior analysis (Oslo)
+-   Scientist at [RISE Research Institutes of Sweden](https://www.ri.se/en/what-we-do/expertises/category-based-measurements)
+    -   Department of Measurement Science and Technology
+-   Background:
+    -   CEO in private care
+    -   10 years consulting; OBM, leadership/groups/organizations, sustainability, etc.
+    -   Swedish pilot trial of the PAX Good Behavior Game (universal prevention in elementary school)
+    -   Very interested in prevention and measurement :)
 
 ### Useful links
 
 -   Github repo for this presentation: <https://github.com/pgmj/RaschIRTlecture>
 -   Presention: <https://pgmj.github.io/RaschIRTlecture/slides.html>
 -   My email: [magnus.p.johansson\@ri.se](mailto:magnus.p.johansson@ri.se){.email}
+
 ```{r}
 #| fig-width: 2
 #| fig-height: 2
 plot(qr_slides)
 ```
-
 
 ## Latent constructs {.smaller background-color="#009ca6"}
 
@@ -174,27 +172,30 @@ You will create a brief questionnaire to measure a unidimensional latent variabl
 -   You will be given a few minutes to come up with **three items** that you think measure the latent variable.
 
 ::: notes
-ÖVNING kommer in här, där de får ta fram tre enkätitems för att mäta något, utan tydligare instruktioner.
+Follow-up questions for participants:
 
--   första frågan om det de gjort är om de inkluderat svarskategorier
--   poängtera att svarskategorierna bildar en enhet med frågan, både sett till tolkningsutrymme och som informationsgivande indikator till den latenta variabeln
--   om de inte gjort svarskategorier, ge dem lite tid att göra detta
+-   did you also create response categories?
+-   emphasize that the response categories make up a unit of information together with the question
+-   and that it is the question and the categories together that determine how open to interpretability the item is
+-   if they didn't make response categories, ask them to do so now
 :::
 
-### Types of data {.smaller}
+### Types of indicator data {.smaller}
 
 -   Dichotomous data - two categories (yes/no; correct/incorrect)
--   Polytomous data - more than two ordered categories (Likert etc)
+-   Polytomous data - more than two ordered categories (Likert, etc)
 -   Interval data - i.e response time
 -   Count data - i.e frequency of behavior during a time period
 
-We'll primarily look at the first two types, as they are by far the most used in psychology and psychometrics.
+We'll primarily look at the first two types, as they are most commonly used in psychology and psychometrics.
 
-## Psychometric quality assessment? {.smaller .incremental background-color="#009ca6"}
+## Psychometric quality assessment {.smaller .incremental}
 
 -   There is no substantial agreement on how to assess the psychometric quality of a measure(!).
--   There are many questionable practices that most agree are wrong (i.e *"sum score and alpha"*), but if you ask two scientists how they determine which measure to use, you will probably get two different answers or one bad answer (*"what everyone else uses"*).
--   We propose five basic psychometric criteria in a paper available as a preprint [@johansson].
+-   If a research article claims that a measure is "valid and reliable", it can mean anything. You need to look at the paper(s) referenced to find out.
+-   There are many questionable practices that most agree are wrong (i.e *"sum score and alpha"*, see next slide)
+    -   but if you ask two scientists how they determine which measure to use, you will probably get two different answers or one bad answer (*"what everyone else uses"*).
+-   We propose five basic psychometric criteria in a preprint [@johansson] to help practitioners and researchers assess the quality of a measure.
 
 ::: footer
 Johansson, M., Preuter, M., Karlsson, S., Möllerberg, M.-L., Svensson, H., & Melin, J. (2023). *Valid and Reliable? Basic and Expanded Recommendations for Psychometric Reporting and Quality Assessment.* OSF Preprints. <https://doi.org/10.31219/osf.io/3htzc>
@@ -251,45 +252,21 @@ psychometric_criteria %>%
   kable()
 ```
 
-## Classical vs modern test theory {.smaller}
-
-Major differences:
-
--   CTT does not include analysis of item location/difficulty, which is a key aspect of IRT
--   CTT assumes that reliability is constant across the continuum
-    -   assumes equal reliability for all respondents
--   CTT has no analysis of monotonicity/ordering of response categories
--   IRT enables the analysis of items and persons on the same (interval level) scale
--   IRT enables estimation of latent variable scores on an interval scale
--   Only Rasch models can justify ordinal sum scores as a sufficient metric to represent measurement on the latent construct scale
-    -   Also... Rasch is a special case, see [@andrich2004; @kyngdon2008].
-
-::: footer
-CTT = factor analysis, principal component analysis, etc; Modern test theory = IRT, Rasch, Mokken, etc
-:::
-
-### Fallacies with either method
-
-No psychometric/statistical method is "safe" from misuse. Some common mistakes to look for in papers:
-
--   CTT: residual correlations added to model to improve fit
--   CTT: default estimator ML used (or estimator not reported), when WLS is appropriate (which it almost always is)
--   CTT and IRT: lack of invariance analysis
--   IRT: not reporting enough aspects/metrics (i.e only reporting item fit or model fit)
-
 ## Intro ramblings over
 
 Let's dive into Item Response Theory and Rasch Measurement Theory!
 
 ## Ability testing {.smaller}
 
--   As a first and simple example, we'll look at data from a test where a participant can either score correct (1) or incorrect (0). We will use the dichotomous Rasch model.
+-   As a first and simple example, we'll look at data from a test where a participant can either score correct (1) or incorrect (0). **More items solved correctly = higher ability.**
+-   We will use the dichotomous Rasch model.
 -   A key assumption of the Rasch model (shared with all IRT models) is that items will have a systematic ordering of **difficulty** that is similar across participants.
 -   This is the structure of the dataset (items = columns):
 
 ```{r}
 rasch_data <- raschdat1 %>% 
-  select(I1:I9)
+  select(I1:I9) %>% 
+  rename_with(~str_replace(., "I", "q"))
 
 rasch_data %>% 
   slice(1:5) %>% 
@@ -298,7 +275,7 @@ rasch_data %>%
 
 ### Guttman pattern {.smaller}
 
-The assumed basic structure of the data is that there is a systematic pattern across items and participants of an increased probability of correct responses as the latent ability increases. The Rasch/IRT 1PL model can be described as a probabilistic Guttman scale [@andrich1985].
+The assumed basic structure of the data is that there is a systematic pattern across items and participants of an increased probability of correct responses as the latent ability increases. The Rasch model can be described as a probabilistic Guttman scale [@andrich1985].
 
 ```{r}
 #| echo: true
@@ -314,162 +291,222 @@ This figure shows items and persons sorted based on the number of correct respon
 #| fig-width: 6
 rasch <- RM(rasch_data)
 plotICC(rasch, item.subset = 4, ask = FALSE, xlim = c(-5,6))
-abline(h = 0.5, lty = "dashed")
 ```
 
-This is a **key figure** in understanding IRT and the concept of item difficulty/location. The point on the x-axis where the line crosses 0.5 is the item difficulty (item location). This is the threshold when the probability of a correct response becomes higher than the probability of an incorrect response. *ICC = item characteristic curve*.
+This is a **key figure** in understanding IRT and the concept of item difficulty/location. The x axis is the latent ability (aka latent variable/dimension/continuum), and the y axis is the probability of a correct response.
+
+::: footer
+*ICC = item characteristic curve*.
+:::
+
+### Item difficulty/location {.smaller}
+
+```{r}
+#| echo: false
+#| fig-width: 6
+rasch <- RM(rasch_data)
+plotICC(rasch, item.subset = 4, ask = FALSE, xlim = c(-5,6))
+abline(h = 0.5, lty = "dashed")
+abline(v = 0.9273215, lty = "dashed")
+```
+
+The point on the x-axis where the y-axis = 0.5 is the **item difficulty (aka item location or item threshold)**. This is the threshold when the probability of a correct response is equal to the probability of an incorrect response. A correct response on this item indicates a higher ability than the item difficulty, and an incorrect response indicates a lower ability than the item difficulty.
+
+::: footer
+*ICC = item characteristic curve*.
+:::
+
+### A note on terminology {.smaller}
+
+By tradition in Rasch/IRT terminology, the term "difficulty" is used to describe the item location on the latent dimension/variable/continuum and "ability" is used to describe the person location on the latent dimension/variable/continuum.
+
+Ability and difficulty are intuitive when describing ability tests, but may be confusing when looking at other types of latent constructs, such as depression or well-being.
+
+A more generic term is the "location" of items and persons on the latent variable. We will move towards using that more consistently in this lecture, but there will be some variation in terminology (sorry!).
 
 ### Item difficulty pt 2 {.smaller}
-
-Nine dichotomous items in the same plot.
 
 ```{r}
 #| echo: true
 #| fig-width: 6
-plotjointICC(rasch, xlim = c(-5,5))
+plotjointICC(rasch, xlim = c(-5,5), main = "ICC for 9 dichotomous items")
 abline(h = 0.5, lty = "dashed")
 ```
 
-This figure illustrates how the items are ordered ("item hierarchy") and the locations on the latent variable where they provide the most information - the "item threshold" - which is the location of probability 0.5 for each dichotomous item.
+This figure illustrates how the items are ordered ("item hierarchy") according to the locations on the latent dimension/variable where they provide the most information - the **item threshold** - which is the location on the x axis where `probability = 0.5` (on the y axis) for each dichotomous item.
 
-### Targeting {.smaller}
+### Item difficulty sorted {.smaller}
 
 ::: columns
 ::: {.column width="30%"}
-This is another **key figure**, derived from a "Wright map". The points in the bottom part show the thresholds for each item. The top histogram shows the distribution of the latent variable for the participants (person locations/abilities). The middle section aggregates the item thresholds to help visualize how well the items fit the persons.
+Here you can see the item threshold locations indicated by points on the x axis.
+
+The items are sorted based on the item threshold locations.
+
+The item threshold locations are the locations on the latent variable where the probability of a correct response is 0.5.
 :::
 
 ::: {.column width="70%"}
 ```{r}
 #| echo: true
-#| fig-height: 7
-RItargeting(rasch_data, dich = TRUE, xlim = c(-4,4))
+#| fig-width: 6
+plotPImap(rasch, sorted = TRUE)
 ```
 :::
+:::
+
+### A note on scaling {.smaller}
+
+IRT/Rasch uses the logit scale, which is an interval scale, for both items and persons. This means that the distance between two points on the scale is the same, regardless of where on the scale you are. Great for statistical analysis!
+
+However, the values on the logit scale have no inherent meaning or external reference point. **This is why we need to look at the item difficulty and person ability in relation to each other.** Do not conflate the zero point on the logit scale with something like 0 on a Z-score scale.
+
+You can also not interpret a person location as good or bad, or high or low, without looking at it in the context of more person locations. A person with a location of 0 is not necessarily "average", "normal", or "healthy" (or anything else). It is just a location on the latent variable.
+
+### Targeting {.smaller}
+
+::: columns
+::: {.column width="30%"}
+This is another **key figure**. The points in the bottom part show the locations for each item.
+
+The top histogram shows the distribution on the latent variable for the respondents (aka person locations/abilities).
+
+The middle section aggregates the item thresholds to help visualize how the item locations correspond to the person locations.
+:::
+
+::: {.column width="70%"}
+```{r}
+#| fig-height: 8
+dfin <- rasch_data
+xlim <- c(-3,3)
+df.erm <- RM(dfin) # run RM model
+# get estimates, code borrowed from https://bookdown.org/chua/new_rasch_demo2/PC-model.html
+person.locations.estimate <- person.parameter(df.erm)
+item.estimates <- coef(df.erm, "beta")*-1 # item coefficients
+#item.fit <- eRm::itemfit(person.locations.estimate)
+
+item.locations <- as.data.frame(item.estimates)
+#names(item.locations) <- paste0("T", c(1:ncol(item.locations))) #re-number items
+itemloc.long <- item.locations %>%
+  rownames_to_column() %>%
+  separate(rowname, c(NA, "names"), sep = " ")
+
+### create df for ggplot histograms
+# person locations
+thetas<-as.data.frame(person.locations.estimate$theta.table)
+pthetas<-thetas$`Person Parameter`
+# item locations
+thresholds<-itemloc.long$item.estimates
+### items and persons in the same variable
+#create data frame with 0 rows and 3 columns
+df.locations <- data.frame(matrix(ncol = 2, nrow = 0))
+#provide column names
+colnames(df.locations) <- c('type', 'locations')
+# change type of data
+df.locations$type<-as.character(df.locations$type)
+df.locations$locations<-as.numeric(df.locations$locations)
+# insert labels in accurate amounts (N+items)
+nper<-nrow(dfin)
+nperp<-nper+1
+nthr<-length(thresholds)+nper
+df.locations[1:nper,1]<-paste0("Persons")
+df.locations[nperp:nthr,1]<-paste0("Item thresholds")
+# insert data from vectors with thetas and thresholds
+df.locations$locations<-c(pthetas,thresholds)
+# change type to class factor
+df.locations$type<-as.factor(df.locations$type)
+
+# get mean/SD for item/person locations
+pi.locations <- data.frame(matrix(ncol = 3, nrow = 3))
+item_difficulty <- as.data.frame(item.estimates) %>%
+  rownames_to_column() %>%
+  dplyr::rename(Item = 'rowname', Location = 'item.estimates')
+
+#
+item.mean <- round(mean(item_difficulty$Location),2)
+item.sd <- round(sd(item_difficulty$Location),2)
+person.mean <- round(mean(pthetas),2)
+person.sd <- round(sd(pthetas),2)
+#provide column names
+colnames(pi.locations) <- c('','Mean', 'SD')
+pi.locations[1,1] <- "Items"
+pi.locations[1,2] <- round(mean(item_difficulty$Location),2)
+pi.locations[1,3] <- round(sd(item_difficulty$Location),2)
+pi.locations[2,1] <- "Persons"
+pi.locations[2,2] <- round(mean(pthetas),2)
+pi.locations[2,3] <- round(sd(pthetas),2)
+
+# make plot with each items thresholds shown as dots
+p3 <- ggplot(itemloc.long, aes(x = names, y = item.estimates, label = names, color = names)) +
+  geom_point(size = 2.5) +
+  geom_text(hjust = 1.15, vjust = 1.2, size = 5.5) +
+  scale_y_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
+  theme_bw(base_size = 14) +
+  theme(legend.position = 'none') +
+  coord_flip(clip = "off") +
+  labs(y = "Location (logit scale)",
+       x = "Items",
+       caption = paste0("Person location average: ", pi.locations[2,2], " (SD ", pi.locations[2,3],"), Item location average: ",
+                        pi.locations[1,2], " (SD ", pi.locations[1,3], "). Sample size: ",nrow(dfin),"."
+       )) +
+  theme(plot.caption = element_text(hjust = 0, face = "italic"))
+
+# Item Threshold location histogram
+p2 <- ggplot() +
+  geom_histogram(data=subset(df.locations, type=="Item thresholds"),
+                 aes(locations, y = after_stat(count))) +
+  labs(x = "",
+       y = "Items aggregated") +
+  scale_x_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
+  scale_y_reverse() +
+  geom_vline(xintercept = item.mean, color = "#e83c63", linetype = 2) +
+  annotate("rect", ymin = 0, ymax = Inf, xmin = (item.mean-item.sd), xmax = (item.mean+item.sd), alpha = .2) +
+  geom_text(hjust = 1.1, vjust = 1) +
+  theme_bw(base_size = 14) +
+  theme(legend.position = 'none')
+
+# Person location histogram
+p1 <- ggplot() +
+  geom_histogram(data=subset(df.locations, type=="Persons"),
+                 aes(locations, fill="Persons", y= after_stat(count))) +
+  xlab('') +
+  ylab('Persons') +
+  scale_x_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
+  geom_vline(xintercept = person.mean, color = "#0e4e65", linetype = 2) +
+  annotate("rect", ymin = 0, ymax = Inf, xmin = (person.mean-person.sd), xmax = (person.mean+person.sd), alpha = .2) +
+  geom_text(hjust = 1.1, vjust = 1) +
+  theme_bw(base_size = 14) +
+  theme(legend.position = 'none',
+        text=element_text(family = "sans"))
+
+
+# combine plots together to create Wright map, and let the individual item threshold plot have some more space
+#plot_grid(p2,p3,p1, labels=NULL, nrow = 3, align ="hv", rel_heights = c(1,1,1.4))
+# put all three plots together with patchwork
+p1 / p2 / p3 + plot_layout(heights = c(1, 1, 1.4))
+```
+:::
+:::
+
+::: footer
+*This figure is sometimes called a "person-item map" or "Wright map"* [@boone2017, p. 8]*.*
 :::
 
 ### Targeting pt 2 {.smaller}
 
 ::: columns
 ::: {.column width="25%"}
-Since items and persons are on the same scale, we can infer a persons item responses from their latent variable score. Let's take a person with score 0 as an example.
+Since items and persons are on the same scale, we can infer a person's item responses from their latent variable location/score. Let's say we have a person with `Location = 0` as an example.
 
-**Which items would this person score correctly?**
+**Which items would this person be most likely to score correctly?**
 :::
 
 ::: {.column width="75%"}
 ```{r}
-#| fig-height: 7
-dfin <- rasch_data
-xlim <- c(-3,3)
-
-    df.erm <- RM(dfin) # run RM model
-    # get estimates, code borrowed from https://bookdown.org/chua/new_rasch_demo2/PC-model.html
-    person.locations.estimate <- person.parameter(df.erm)
-    item.estimates <- coef(df.erm, "beta")*-1 # item coefficients
-    #item.fit <- eRm::itemfit(person.locations.estimate)
-    
-    item.locations <- as.data.frame(item.estimates)
-    #names(item.locations) <- paste0("T", c(1:ncol(item.locations))) #re-number items
-    itemloc.long <- item.locations %>%
-      rownames_to_column() %>%
-      separate(rowname, c(NA, "names"), sep = " ")
-    
-    ### create df for ggplot histograms
-    # person locations
-    thetas<-as.data.frame(person.locations.estimate$theta.table)
-    pthetas<-thetas$`Person Parameter`
-    # item locations
-    thresholds<-itemloc.long$item.estimates
-    ### items and persons in the same variable
-    #create data frame with 0 rows and 3 columns
-    df.locations <- data.frame(matrix(ncol = 2, nrow = 0))
-    #provide column names
-    colnames(df.locations) <- c('type', 'locations')
-    # change type of data
-    df.locations$type<-as.character(df.locations$type)
-    df.locations$locations<-as.numeric(df.locations$locations)
-    # insert labels in accurate amounts (N+items)
-    nper<-nrow(dfin)
-    nperp<-nper+1
-    nthr<-length(thresholds)+nper
-    df.locations[1:nper,1]<-paste0("Persons")
-    df.locations[nperp:nthr,1]<-paste0("Item thresholds")
-    # insert data from vectors with thetas and thresholds
-    df.locations$locations<-c(pthetas,thresholds)
-    # change type to class factor
-    df.locations$type<-as.factor(df.locations$type)
-    
-    # get mean/SD for item/person locations
-    pi.locations <- data.frame(matrix(ncol = 3, nrow = 3))
-    item_difficulty <- as.data.frame(item.estimates) %>%
-      rownames_to_column() %>%
-      dplyr::rename(Item = 'rowname', Location = 'item.estimates')
-    
-    #
-    item.mean <- round(mean(item_difficulty$Location),2)
-    item.sd <- round(sd(item_difficulty$Location),2)
-    person.mean <- round(mean(pthetas),2)
-    person.sd <- round(sd(pthetas),2)
-    #provide column names
-    colnames(pi.locations) <- c('','Mean', 'SD')
-    pi.locations[1,1] <- "Items"
-    pi.locations[1,2] <- round(mean(item_difficulty$Location),2)
-    pi.locations[1,3] <- round(sd(item_difficulty$Location),2)
-    pi.locations[2,1] <- "Persons"
-    pi.locations[2,2] <- round(mean(pthetas),2)
-    pi.locations[2,3] <- round(sd(pthetas),2)
-    
-    # make plot with each items thresholds shown as dots
-    p3 <- ggplot(itemloc.long, aes(x = names, y = item.estimates, label = names, color = names)) +
-      geom_point() +
-      geom_text(hjust = 1.15, vjust = 1.2, size = 5.5) +
-      scale_y_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
-      theme_bw() +
-      theme(legend.position = 'none') +
-      coord_flip() +
-      labs(y = "Location (logit scale)",
-           x = "Items",
-           caption = paste0("Person location average: ", pi.locations[2,2], " (SD ", pi.locations[2,3],"), Item location average: ",
-                            pi.locations[1,2], " (SD ", pi.locations[1,3], "). Sample size: ",nrow(dfin),"."
-           )) +
-      theme(plot.caption = element_text(hjust = 0, face = "italic"))
-    
-    # Item Threshold location histogram
-    p2 <- ggplot() +
-      geom_histogram(data=subset(df.locations, type=="Item thresholds"),
-                     aes(locations, y= after_stat(count))) +
-      labs(x = "",
-           y = "Items aggregated") +
-      scale_x_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
-      scale_y_reverse() +
-      geom_vline(xintercept = item.mean, color = "#e83c63", linetype = 2) +
-      annotate("rect", ymin = 0, ymax = Inf, xmin = (item.mean-item.sd), xmax = (item.mean+item.sd), alpha = .2) +
-      geom_text(hjust = 1.1, vjust = 1) +
-      theme_bw() +
-      theme(legend.position = 'none')
-    
-    # Person location histogram
-    p1 <- ggplot() +
-      geom_histogram(data=subset(df.locations, type=="Persons"),
-                     aes(locations, fill="Persons", y= after_stat(count))) +
-      xlab('') +
-      ylab('Persons') +
-      scale_x_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
-      geom_vline(xintercept = person.mean, color = "#0e4e65", linetype = 2) +
-      annotate("rect", ymin = 0, ymax = Inf, xmin = (person.mean-person.sd), xmax = (person.mean+person.sd), alpha = .2) +
-      geom_text(hjust = 1.1, vjust = 1) +
-      theme_bw() +
-      theme(legend.position = 'none',
-            text=element_text(family = "sans"))
-    
-    
-    # combine plots together to create Wright map, and let the individual item threshold plot have some more space
-    #plot_grid(p2,p3,p1, labels=NULL, nrow = 3, align ="hv", rel_heights = c(1,1,1.4))
-    # put all three plots together with patchwork
-    p1 / p2 / p3 + plot_layout(heights = c(1, 1, 1.4))
-  
+#| fig-height: 8
+p1 / p2 / p3 + plot_layout(heights = c(1, 1, 1.4))
 ```
+
 :::
 :::
 
@@ -480,12 +517,6 @@ We have looked at the Rasch model for dichotomous data, also sometimes (not quit
 I generally use the term "location" for both items and persons as it is more generic. But for didactic purposes, when speaking of ability tests, it is probably easier to think about the specific term "difficulty" for items and how it related to the persons latent "ability".
 
 In IRT terminology, "person location" is frequently referred to as "theta", often using this symbol: $\theta$
-
-### A note on scaling {.smaller}
-
-IRT/Rasch uses the logit scale, which is an interval scale, for both items and persons. This means that the distance between two points on the scale is the same, regardless of where on the scale you are.
-
-However, the values on the logit scale have no inherent meaning or external reference point. **This is why we need to look at the item difficulty and person ability in relation to each other.** Do not conflate the zero point on the logit scale with something like 0 on a Z-score scale.
 
 ### Exercise pt 2 {background-color="#fdf4dc"}
 
@@ -499,13 +530,18 @@ Let's return to the items you created before.
 
 ### Other IRT models {.smaller}
 
-The 2PL and 3PL models are also commonly used. The 2PL model adds a second parameter, the item discrimination, which is a measure of how well the item separates between persons with high and low ability.
+The 2PL and 3PL models are also commonly used. The 2PL model adds a second parameter,  item discrimination, which describes how well the item separates between persons with high and low ability.
 
 ```{r}
 #| echo: true
 #| layout-ncol: 2
-mirt(rasch_data, 1, itemtype = "Rasch", verbose = FALSE) %>%  plot(type="trace", facet_items = FALSE)
-mirt(rasch_data, 1, itemtype = "2PL", verbose = FALSE) %>%   plot(type="trace", facet_items = FALSE)
+#| fig-height: 6
+#| fig-cap: ""
+#| fig-subcap:
+#|   - "Rasch model"
+#|   - "2PL model"
+mirt(rasch_data, 1, itemtype = "Rasch", verbose = FALSE) %>% plot(type="trace", facet_items = FALSE)
+mirt(rasch_data, 1, itemtype = "2PL", verbose = FALSE) %>% plot(type="trace", facet_items = FALSE)
 ```
 
 ::: notes
@@ -514,21 +550,24 @@ The Rasch model assumes that the discrimination parameter is 1 for all items, wh
 
 ### 3PL model {.smaller}
 
-The 3PL model adds a third parameter, which makes the ICC figure look like this for example.
+The 3PL model adds a third parameter, which makes the figure look like this.
 
 ```{r}
 #| echo: true
-mirt(rasch_data, 1, itemtype = "3PL", verbose = FALSE) %>%   plot(type="trace", facet_items = FALSE)
+#| fig-height: 6
+mirt(rasch_data, 1, itemtype = "3PL", verbose = FALSE) %>% plot(type="trace", facet_items = FALSE)
 ```
 
 Can you guess what the third parameter is?
 
-::: notes
-the guessing parameter, which is a measure of how likely it is that a person with low ability will answer the item correctly.
+::: incremental
+- The guessing parameter! It describes how likely it is that a person will provide a correct answer to an item located above their ability. Useful in multiple choice questions, for instance.
 :::
 
-### Similarities of CTT and IRT
+### CTT and IRT - similarities
 
+- Classical Test Theory (CTT) includes a range of methods, most often some form of factor analysis
+    - There is a slide at the end of this presentation about differences between CTT and IRT
 -   Item threshold locations are similar to item intercepts in CTT
 -   Item discrimination is similar to factor loadings in CTT
 
@@ -626,7 +665,7 @@ q12nICC <- ggplot(df.icc,
 q12nICC + scale_color_viridis_d(option = "D", labels = categories, end = 0.97)
 ```
 
-### Item category Thresholds
+### Item category thresholds
 
 ```{r}
 #| eval: false
@@ -646,9 +685,15 @@ q12nICC + scale_color_viridis_d(option = "D", labels = categories, end = 0.97) +
   geom_vline(xintercept = q12n_locs[4], linetype = "dashed")
 ```
 
+::: footer
+A polytomous item has multiple thresholds, located where the probability curves for adjacent response categories intersect. The intersections are shown with dashed vertical lines.
+:::
+
 ### Guesstimating theta {.smaller}
 
-Recall $\theta$ ? Let's say a person responds "Often" to this item, in which range is it most likely that their theta is?
+Recall $\theta$ (person location)? 
+
+- Let's say a person responds "Often" to this item, in which range is it most likely that their theta is?
 
 ```{r}
 q12nICC + scale_color_viridis_d(option = "D", labels = categories, end = 0.97) +
@@ -696,8 +741,18 @@ q12n_r4 +   labs(title = "'During the last month, have you...",
   caption = "Note. Estimated theta shown with black diamond shape, and standard error of measurement with a black horizontal line.")
 ```
 
+::: footer
+The diamond symbol represents the estimated theta value (person location on the latent variable) for a person who responded "often" to this question (and this question only).
+:::
+
 ::: notes
 This is the estimated theta based on the item threshold location parameters, using Warm's (1989) WL estimator. The standard error is also shown.
+
+The diamond symbol represents the estimated theta value (person location on the latent variable) for a person who responded "often" to this question (and this question only). The area between the thresholds for "often" gives us a "best guess" of where it is most likely that the actual theta value for this person is, hence the slide title "Guesstimating theta" used on the previous slides.
+
+The estimated theta also includes an estimated standard error of measurement (SEM), which is indicated by the horizontal line. The theta and SEM values are estimated using a Weighted Likelihood procedure to correct for bias (see Warm, 1989, doi: 10.1007/BF02294627 for details).
+
+As you can see, the line is longer than the area between the thresholds, which underscores that the uncertainty of the measurement is large when only using one item.
 :::
 
 ### In context {.smaller}
@@ -787,7 +842,8 @@ pi.locations[3,3] <- round(sd(pthetas),2)
 p1 <- ggplot() +
   geom_histogram(
     data = subset(df.locations, type == "Persons"),
-    aes(locations, fill = "Persons", y = after_stat(count))
+    aes(locations, fill = "Persons", y = after_stat(count)),
+    bins = 45
   ) +
   xlab("") +
   ylab("Persons") +
@@ -795,7 +851,7 @@ p1 <- ggplot() +
   geom_vline(xintercept = person.mean, color = "#0e4e65", linetype = 2) +
   annotate("rect", ymin = 0, ymax = Inf, xmin = (person.mean - person.sd), xmax = (person.mean + person.sd), alpha = .2) +
   geom_text(hjust = 1.1, vjust = 1) +
-  theme_bw() +
+  theme_bw(base_size = 15, base_family = "Lato") +
   theme(
     legend.position = "none",
     text = element_text(family = "sans")
@@ -847,18 +903,25 @@ p1_r4 / q12n_r4 # + plot_layout(heights = c(1, 1, 1.4))
 ```
 :::
 
+::: notes
+The question is stated because by one respondent to one item in isolation, we have no way of knowing how to interpret this respondent's theta. We need to look at a larger sample to understand how their thetas are distributed, to have context for interpreting the single respondents theta.
+
+This is shown in the top part of the targeting figure in this slide (the full targeting figure is shown on the slide titled "PSS-7 targeting"), where you can see that the example respondent has a theta which is most likely below the average, within one standard deviation of the average.
+:::
+
 ### ICC → targeting figure
 
 ```{r}
 p3_r4 <- 
   itemloc.long %>% 
   filter(names == "q12n") %>%
-  ggplot(aes(x = names, y = par_values, label = thresholds, color = names)) +
+  ggplot(aes(x = names, y = par_values, label = thresholds, color = thresholds)) +
   geom_point() +
   geom_text(hjust = 1.1, vjust = 1) +
   scale_y_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
-  theme_bw() +
+  theme_bw(base_size = 15, base_family = "Lato") +
   theme(legend.position = "none") +
+  scale_color_viridis_d(option = "D", end = 0.97) +
   coord_flip() +
   labs(y = "",
        x = "Items"
@@ -885,7 +948,7 @@ p3_12_8 <-
   geom_point() +
   geom_text(hjust = 1.1, vjust = 1) +
   scale_y_continuous(limits = xlim, breaks = scales::breaks_extended(n = 10)) +
-  theme_bw() +
+  theme_bw(base_size = 15, base_family = "Lato") +
   theme(legend.position = "none") +
   coord_flip() +
   labs(y = "",
@@ -1057,10 +1120,10 @@ RIitemHierarchy2 <- function(dfin, ci = "95"){
       geom_point(aes(y = Locations),
                  position = position_nudge()) +
       geom_text(aes(y = Location, label = round(Location,2)),
-                hjust = 0.5, vjust = 2, color = "black", size = 3,
+                hjust = 0.5, vjust = -1.3, color = "black", size = 3,
                 show.legend = FALSE) +
       geom_text(aes(y = Location, label = round(Location-mean(Location),2)),
-                hjust = 0.5, vjust = -1.3, color = "darkgrey", size = 3,
+                hjust = 0.5, vjust = 2, color = "darkgrey", size = 3,
                 show.legend = FALSE) +
       geom_errorbar(aes(ymin = Locations - 1.96*ThreshSEM, ymax = Locations + 1.96*ThreshSEM),
                     width = 0.11
@@ -1080,7 +1143,8 @@ RIitemHierarchy2 <- function(dfin, ci = "95"){
             Grey text indicates the deviation of the item location from the mean item location ({round(mean(itemLocs$Location),2)}).
             Item threshold locations are indicated by colored dots and colored text.
             Horizontal error bars indicate 95% confidence intervals around threshold locations.")) +
-      scale_color_brewer(palette = "Dark2", guide = "none") +
+      #scale_color_brewer(palette = "Dark2", guide = "none") +
+      scale_color_viridis_d(guide = "none", option = "H") +
       theme(plot.caption = element_text(hjust = 0, face = "italic"),
             legend.position = "none")
   }
@@ -1092,6 +1156,7 @@ RIitemHierarchy2 <- function(dfin, ci = "95"){
 ```{r}
 #| echo: true
 RIitemHierarchy2(pss7) + theme_rise()
+
 ```
 
 ::: notes
@@ -1450,6 +1515,10 @@ pss7p %>%
   RIdifTable(pss7p_dif_age)
 ```
 
+::: footer
+Item q9p: "been able to control irritations in your life?"
+:::
+
 ### DIF figure item locations
 
 ```{r}
@@ -1477,13 +1546,17 @@ pss7p %>%
 
 ![](images/DIFicc.png)
 
+::: footer
+Sorry for the Swedish example, this will be remade in English. It illustrates how the item thresholds can differ between two groups, most notably for the second threshold.
+:::
+
 ### DIF comments {.smaller}
 
 -   Important and complex topic
 -   The practical effects of DIF found are affected both by the total number of items and the size of the DIF
 -   Large sample sizes will indicate statistically significant DIF, but DIF size is the key metric
 -   How to deal with problematic DIF is outside the scope of this lecture
-  -   For more examples and details on DIF, see: [@andrich2012; @andrich2015; @hagquist2019; @hagquist2017]
+-   For more examples and details on DIF, see: [@andrich2012; @andrich2015; @hagquist2019; @hagquist2017]
 
 ## Reliability {.smaller}
 
@@ -1491,9 +1564,10 @@ Affects statistical power to detect changes/differences in the latent trait. Rel
 
 It is important to understand the reliability of the measure itself, and then how it applies to the population of interest. Since reliability is not constant across the latent variable continuum, targeting becomes a factor in determining reliability in a practical use case.
 
-### Standard error of measurement {.smaller} 
+### Standard error of measurement {.smaller}
 
 Recall this figure? The horizontal lines around the diamond shapes get smaller and smaller for each item we add.
+
 ```{r}
 p1_8_12_2 / p3_12_8_2 + plot_layout(heights = c(1, 0.6))
 ```
@@ -1510,6 +1584,7 @@ RIscoreSE(pss7, output = "figure",score_range = c(-4,5)) +
 ```
 
 ### SEM figure 2
+
 ```{r}
 #| fig-width: 7
 ordinal_interval <- RIscoreSE(pss7, output = "dataframe", score_range = c(-4,5)) %>% 
@@ -1568,7 +1643,7 @@ theta_sem %>%
   theme_rise() +
   labs(title = "Standard error of measurement by number of items administered",
        subtitle = "PSS-7 negative items",
-       caption = "Note: Shaded area shows SEM",
+       caption = "Note: Shaded area shows SEM. Values shown are for one simulated respondent only.",
        y = "Estimated theta for one respondent", x = "Number of items administered to respondent")
   
 ```
@@ -1590,11 +1665,37 @@ Not many item thresholds in the location of the respondent, which means that the
 
 ## Wrapping up {.smaller}
 
-- We have covered a lot of material today!
-- Most of it you are not expected to remember (few know these things)
-- You will be expected to know basic terms and concepts
-- You now know that these methods and tools exist and where to find them
-  - I have created an R package for Rasch analysis: (RISEkbmRasch)[https://pgmj.github.io/raschrvignette/RaschRvign.html]
+-   We have covered a lot of material today!
+-   Most of it you are not expected to remember (few know these things)
+-   You will be expected to know basic terms and concepts
+-   You now know that these methods and tools exist and where to find them
+    -   I have created an R package for Rasch analysis: [RISEkbmRasch](https://pgmj.github.io/raschrvignette/RaschRvign.html)
+
+## Classical vs modern test theory {.smaller}
+
+Major differences:
+
+-   CTT does not include analysis of item location/difficulty, which is a key aspect of IRT
+-   CTT assumes that reliability is constant across the continuum
+    -   assumes equal reliability for all respondents
+-   CTT has no analysis of monotonicity/ordering of response categories
+-   IRT enables the analysis of items and persons on the same (interval level) scale
+-   IRT enables estimation of latent variable scores on an interval scale
+-   Only Rasch models can justify ordinal sum scores as a sufficient metric to represent measurement on the latent construct scale
+    -   Also... Rasch is a special case, see [@andrich2004; @kyngdon2008].
+
+::: footer
+CTT = factor analysis, principal component analysis, etc; Modern test theory = IRT, Rasch, Mokken, etc
+:::
+
+### Fallacies with either method
+
+No psychometric/statistical method is "safe" from misuse. Some common mistakes to look for in papers:
+
+-   CTT: residual correlations added to model to improve fit
+-   CTT: default estimator ML used (or estimator not reported), when WLS is appropriate (which it usually is for ordinal data)
+-   CTT and IRT: lack of invariance analysis
+-   IRT: not reporting enough aspects/metrics (i.e only reporting item fit or model fit)
 
 ## Report everything!? {.smaller}
 
